--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,15 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green" >
+    android:background="@color/white" >
 
     <ImageView
-        android:src="@mipmap/ic_launcher"
-        android:contentDescription=""
-        tools:ignore="ContentDescription"
-        android:layout_height="120sp"
         android:layout_width="250sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="120sp"
+        android:layout_centerInParent="true"
+        android:contentDescription=""
+        android:src="@mipmap/ic_logo"
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
