--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:gravity="center_vertical|center_horizontal|center"
-            android:visibility="gone"
+            android:visibility="visible"
             tools:ignore="RtlHardcoded">
 
             <ImageView
@@ -32,7 +32,7 @@
                 android:layout_gravity="top"
                 android:contentDescription="Image"
                 android:gravity="center_vertical|center_horizontal|center"
-                android:src="@mipmap/ic_logo" />
+                android:src="@drawable/epam" />
 
             <TextView
                 android:id="@+id/msw_loading_text"
@@ -79,7 +79,7 @@
             android:id="@+id/msw_view"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:visibility="visible" />
+            android:visibility="gone" />
         <ProgressBar
             android:id="@+id/msw_progress_outer"
             style="@android:style/Widget.ProgressBar.Horizontal"
@@ -92,11 +92,10 @@
             android:visibility="gone" />
 
         <ProgressBar
+            android:id="@+id/loadingbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/loadingbar"
-            android:visibility="visible"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
     </RelativeLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
