--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
         android:layout_height="120sp"
         android:layout_centerInParent="true"
         android:contentDescription=""
-        android:src="@mipmap/ic_logo"
+        android:src="@drawable/epam"
         tools:ignore="ContentDescription" />
 
 </RelativeLayout>
