--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_marginTop="120dp"
                 android:gravity="center_vertical|center_horizontal|center"
-                android:text="Description about app"
+                android:text="A grocery delivery application"
                 android:textColor="?android:attr/textColorTertiary"
                 android:textSize="18sp"
                 android:textStyle="normal|bold"
